@@ -102,8 +102,8 @@
   }
 
   newoption {
-    trigger     = "new-trimesh",
-    description = "Use new OPCODE trimesh-trimesh collider (experimental)"
+    trigger     = "old-trimesh",
+    description = "Use old OPCODE trimesh-trimesh collider"
   }
   
   newoption {
@@ -326,8 +326,8 @@
       text = string.gsub(text, "#define dTRIMESH_16BIT_INDICES 0", "#define dTRIMESH_16BIT_INDICES 1")
     end
   
-    if _OPTIONS["new-trimesh"] then
-      text = string.gsub(text, "#define dTRIMESH_OPCODE_USE_NEW_TRIMESH_TRIMESH_COLLIDER 0", "#define dTRIMESH_OPCODE_USE_NEW_TRIMESH_TRIMESH_COLLIDER 1")
+    if _OPTIONS["old-trimesh"] then
+      text = string.gsub(text, "#define dTRIMESH_OPCODE_USE_OLD_TRIMESH_TRIMESH_COLLIDER 0", "#define dTRIMESH_OPCODE_USE_OLD_TRIMESH_TRIMESH_COLLIDER 1")
     end
     
     io.output("../ode/src/config.h")
